--- a/Van Gogh Evolucional/Form1.resx
+++ b/Van Gogh Evolucional/Form1.resx
@@ -2420,6 +2420,9 @@
         E6HFofhfSYrO1A3mOLJLueWdmOSzHuSSa8Zm/wBfJ/11b+dera0Uc83zSuf/2Q==
 </value>
   </data>
+  <metadata name="ckEnhanceVisual.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
+  </metadata>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAgEAAAAAAAD/7gAOQWRvYmUAZAAAAAAB/9sAQwAIBgYGBgYIBgYIDAgHCAwOCggI
