--- a/Van Gogh Evolucional/Form1.resx
+++ b/Van Gogh Evolucional/Form1.resx
@@ -2423,6 +2423,9 @@
         E6HFofhfSYrO1A3mOLJLueWdmOSzHuSSa8Zm/wBfJ/11b+dera0Uc83zSuf/2Q==
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAgEAAAAAAAD/7gAOQWRvYmUAZAAAAAAB/9sAQwAIBgYGBgYIBgYIDAgHCAwOCggI
